dropdown icon not showing on home fixed

--- a/Project/public/css/nav.css
+++ b/Project/public/css/nav.css
@@ -94,6 +94,7 @@ button, input{
 }
 .dropdown-content a:hover {
   background-color: #ddd;
+  border-radius: 10px;
 }
 
 .dropdown:hover .dropdown-content {
